Save local project changes
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>